--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,68 +1,46 @@
-<body style="background: url('<%= asset_path("fallingdoc.png") %>') no-repeat center center fixed; background-size: cover; margin: 0; padding-top: 20px;">
-
-<h1 class="members-title">Members</h1>
-
-
-<style>
-  .members-title {
-    color: white;
-    font-size: 4rem; /* Ajustez la taille selon vos besoins */
-    text-align: center;
-    margin-bottom: 50px; /* Ajustez cette valeur selon vos besoins */
-    margin-top: 20px; /* Ajoutez cette ligne pour monter le titre */
-  }
-
-  .username {
-    color: white;
-    font-size: 1.2rem; /* Ajustez la taille selon vos besoins */
-    margin-top: 10px;
-  }
-
-  .avatar {
-    width: 60px; /* Ajustez cette valeur selon vos besoins */
-    height: 60px; /* Ajustez cette valeur selon vos besoins */
-    border-radius: 50%; /* Pour rendre l'avatar circulaire */
-    margin-bottom: 10px;
-  }
-
-  .document-card {
-    height: 100px;
-    width: 300px; /* Adjust the height as needed */
-  }
-</style>
-
-<div class="row">
-  <% @group.users.each do |user| %>
-    <div class="col-3 mb-4">
-      <div class="member text-center">
-        <% if user.photo.attached? %>
-          <%= image_tag url_for(user.photo), class: "avatar", alt: "avatar" %>
-        <% end %>
-        <p class="username"><%= user.username %></p>
-      </div>
-    </div>
-  <% end %>
-</div>
-
-<h2>Documents</h2>
-<div class="row">
-  <% @group.documents.each do |document| %>
-    <div class="col-3 mb-4">
-      <div class="document doccard">
-        <% if document.photo.attached? %>
-          <%= link_to group_document_path(@group, document) do %>
-            <%= image_tag url_for(document.photo), class: "image-doc img-fluid" %>
-            <h3 class="doc-title"><%= document.title %></h3>
+<%# <h1 class="members-title">Members</h1> %>
+<div class="d-flex flex-direction-column align-items-center justify-content-between row pt-3 px-3" style="height: 100vh; padding-bottom: 10vh;">
+  <div>
+    <div class="d-flex align-items-center justify-content-center">
+      <% @group.users.each do |user| %>
+        <div class="member text-center px-2">
+          <% if user.photo.attached? %>
+            <%= image_tag url_for(user.photo), class: "avatar", alt: "avatar" %>
           <% end %>
+          <p class="username"><%= user.username %></p>
+        </div>
+      <% end %>
+    </div>
+    <div class="d-flex align-items-center justify-content-center">
+      <%= link_to "Voir tous les documents", documents_path, class: "text-white px-3" %>
+      <button type="button" class="button-34" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Add members
+      </button>
+    </div>
+  </div>
+
+  <div id="chat-messages" class="messages">
+    <% first_date = @messages.first.created_at.strftime("%b %d") %>
+    <% @messages.each do |message| %>
+      <div class="message text-white d-flex flex-column">
+        <% if message.created_at.strftime("%b %d") != first_date || message == @messages.first %>
+          <div >
+            <strong><%= message.user.username %> - <%= message.created_at.strftime("%b %d") %></strong>
+          </div>
+          <% first_date = message.created_at.strftime("%b %d") %>
         <% end %>
+        <p><%= message.content %></p>
       </div>
+    <% end %>
+  </div>
+
+  <%= form_with(model: [@group, @message], local: true) do |form| %>
+    <div class="d-flex">
+      <%= form.text_area :content, rows: 2, class: "form-control", placeholder: "Type your message here..." %>
+      <%= form.submit "Send", class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
-
-<button type="button" style="margin-top: 70px; margin-bottom: 10px;" class="button-34" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Add members
-</button>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -91,25 +69,7 @@
   </div>
 </div>
 
-<h2>Chatroom</h2>
-<div class="chatroom">
-  <div id="messages" class="messages">
-    <% @messages.each do |message| %>
-      <div class="message">
-        <strong><%= message.user.username %>:</strong>
-        <%= message.content %>
-      </div>
-    <% end %>
-  </div>
-  <%= form_with(model: [@group, @message], local: true) do |form| %>
-    <div class="form-group">
-      <%= form.text_area :content, rows: 3, class: "form-control", placeholder: "Type your message here..." %>
-    </div>
-    <div class="form-group mt-2">
-      <%= form.submit "Send", class: "btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+
 
 <style>
   .chatroom {
@@ -121,12 +81,38 @@
   }
 
   .messages {
-    max-height: 300px;
+    max-height: 50vh;
     overflow-y: auto;
   }
 
   .message {
     padding: 5px 0;
     border-bottom: 1px solid #eee;
+  }
+
+  .members-title {
+    color: white;
+    font-size: 4rem; /* Ajustez la taille selon vos besoins */
+    text-align: center;
+    margin-bottom: 50px; /* Ajustez cette valeur selon vos besoins */
+    margin-top: 20px; /* Ajoutez cette ligne pour monter le titre */
+  }
+
+  .username {
+    color: white;
+    font-size: 1.2rem; /* Ajustez la taille selon vos besoins */
+    margin-top: 10px;
+  }
+
+  .avatar {
+    width: 60px; /* Ajustez cette valeur selon vos besoins */
+    height: 60px; /* Ajustez cette valeur selon vos besoins */
+    border-radius: 50%; /* Pour rendre l'avatar circulaire */
+    margin-bottom: 10px;
+  }
+
+  .document-card {
+    height: 100px;
+    width: 300px; /* Adjust the height as needed */
   }
 </style>
