--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,61 +1,58 @@
 <div class="top-bar" style="position: absolute; top: 0; right: 0;">
   <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" style="margin-right: 20px; margin-top: 20px;" >
 </div>
-
 <div class="menu_create" data-controller="home">
   <a class="icon-button" data-bs-toggle="modal" data-bs-target="#addGroupModal">
   <i class="fa-solid fa-people-roof"></i>
   </a>
 </div>
-
 <h2>My last Group</h2>
 <div class="groups-container">
   <div class="row home-groups">
     <% @groups.each do |group| %>
       <div class="col-md-3 mb-2">
+        <%= link_to group_path(group), style: "text-decoration: none; color: inherit;" do %>
+          <div class="card" style="width: 100%;">
+            <div class="card-body">
+              <% if group.photo.attached? %>
+                <div style="display: flex; align-items: center;">
+                  <%= image_tag url_for(group.photo), class: "image-doc", style: "margin-right: 10px;" %>
+                  <div class="doc-title" style="font-weight: bold; color: #6A1B9A;">
+                    <%= group.title %>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
+<h2>My last Document</h2>
+<div class="doc-home">
+  <% @documents.each do |document| %>
+    <div class="mb-2">
+      <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
         <div class="card" style="width: 100%;">
           <div class="card-body">
-            <% if group.photo.attached? %>
+            <% if document.photo.attached? %>
               <div style="display: flex; align-items: center;">
-                <%= image_tag url_for(group.photo), class: "image-doc", style: "margin-right: 10px;" %>
-                <div class="doc-title">
-                  <%= link_to group.title, group_path(group), style: "font-weight: bold; color: #6a1b9a; text-decoration: none;" %>
+                <%= image_tag url_for(document.photo), class: "image-doc", style: "margin-right: 10px;" %>
+                <div class="doc-title" style="font-weight: bold; color: #6A1B9A;">
+                  <%= document.title %>
                 </div>
               </div>
             <% end %>
           </div>
         </div>
-      </div>
-    <% end %>
-  </div>
-</div>
-
-
-<h2>My last Document</h2>
-<div class="doc-home">
-  <% @documents.each do |document| %>
-    <div class="mb-2">
-      <div class="card" style="width: 100%;">
-        <div class="card-body">
-          <% if document.photo.attached? %>
-            <div style="display: flex; align-items: center;">
-              <%= image_tag url_for(document.photo), class: "image-doc", style: "margin-right: 10px;" %>
-              <div class="doc-title">
-                <%= link_to document.title, document_path(document), style: "font-weight: bold; color: #6a1b9a; text-decoration: none;" %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
+      <% end %>
     </div>
   <% end %>
 </div>
-
-
 <a href="<%= groups_path %>" class="btn btn-outline-light">
   <h2>See all</h2>
 </a>
-
 <div class="modal fade" id="addGroupModal" tabindex="-1" aria-labelledby="addGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
