--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,13 +6,13 @@
   <i class="fa-solid fa-people-roof"></i>
   </a>
 </div>
+
 <h2>My last Group</h2>
 <div class="groups-container">
   <div class="row home-groups">
     <% @groups.each do |group| %>
-      <div class="col-md-3 mb-2">
-        <%= link_to group_path(group), style: "text-decoration: none; color: inherit;" do %>
-          <div class="card" style="width: 100%;">
+        <%= link_to group_path(group), style: "text-decoration: none; color: inherit;", class: "group-card-caroussel" do %>
+          <div class="card">
             <div class="card-body">
               <% if group.photo.attached? %>
                 <div style="display: flex; align-items: center;">
@@ -25,12 +25,12 @@
             </div>
           </div>
         <% end %>
-      </div>
     <% end %>
   </div>
 </div>
+
 <h2>My last Document</h2>
-<div class="doc-home">
+<div class="doc-home" style="">
   <% @documents.each do |document| %>
     <div class="mb-2">
       <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
@@ -44,12 +44,18 @@
                 </div>
               </div>
             <% end %>
+            <% if document.group %>
+              <div class="group-title" style="margin-top: 10px; color: #8A2BE2;">
+                <p><strong>Group:</strong> <%= document.group.title %></p>
+              </div>
+            <% end %>
           </div>
         </div>
       <% end %>
     </div>
   <% end %>
 </div>
+
 <a href="<%= groups_path %>" class="btn btn-outline-light">
   <h2>See all</h2>
 </a>
